apps/common/kyverno/Namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
  name: kyverno
  labels:
    k8s-namespace: kyverno
